k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-demo-app
  labels:
    app: platform-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-demo-app
  template:
    metadata:
      labels:
        app: platform-demo-app
    spec:
      containers:
        - name: app
          image: platform-demo-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
