k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo-app
spec:
  selector:
    app: platform-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
