k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-demo-app
spec:
  ingressClassName: nginx
  rules:
    - host: platform-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-demo-app
                port:
                  number: 80
